# innocence

./: .env  .gitignore  Cargo.toml  README.md  development.yml  diesel.toml  docker-compose.yml  dockerfile  燕无歇.lrc
crates/database/: Cargo.toml
crates/database/src/: pagination.rs  schema.rs
crates/database/src/dao/: book.rs  mod.rs  user.rs
crates/database/src/entity/: bill.rs  book.rs
crates/db-schema/: Cargo.toml
crates/db-schema/src/: lib.rs
crates/db-schema/src/dao/: book.rs  user.rs
crates/db-schema/src/entity/: book.rs  episode.rs  user.rs
crates/db-schema/src/repository/: book.rs  mod.rs  user.rs
crates/db-schema/src/structs/: episode.rs
crates/schema/: Cargo.toml
crates/schema/src/entity/: mod.rs  user.rs
crates/utils/: Cargo.toml
crates/utils/src/: authorization.rs  config.rs  encrypt.rs  lib.rs  pagination.rs  validate.rs
migrations/2021-06-05-091547_create_books/: up.sql
migrations/2021-12-19-154332_banner/: up.sql
src/: claims.rs  constants.rs  errors.rs  handlers.rs  helpers.rs  main.rs  middleware.rs  policy.csv  routes.rs  schema.rs  server.rs  validate.rs
src/database/: book.rs  mod.rs  user.rs
src/database/dao/: book.rs  mod.rs  user.rs
src/database/entity/: book.rs  episode.rs  mod.rs
src/database/model/: book.rs  mod.rs  user.rs
src/datasource/: book.rs  mod.rs  user.rs
src/entity/: book.rs  user.rs
src/handlers/: book.rs  mod.rs  user.rs
src/handlers-a/: account.rs  auth.rs
src/model/: book.rs  mod.rs
src/plugins/: hash.rs  jwt.rs  mod.rs
src/schemas/: book.rs  mod.rs  root.rs  user.rs
src/tests/: mod.rs
src/utils/: mod.rs
