[package]
name = "innocence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-cors ="0.6.0-beta.3"
actix-files ="0.6.0-beta.8"
# actix-identity ="0.4.0-beta.2"
actix-web = "4.0.0-beta.10"

argon2rs = "0.2"
awc = "3.0.0-beta.9"
chrono ={version = "0.4",features = ["serde"]}

diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
derive_more = "0.99"
dotenv = "0.15"
envy = "0.4"
env_logger = "0.9"
futures = "0.3"
jsonwebtoken = "7"
lazy_static = "1"
log = "0.4"
openssl = "0.10"
rand="0.8"
# redis="0.21"
# for serialize
serde = { version = "1", features = ["derive"] }
validator = { version = "0.14", features = ["derive"] }

[dev-dependencies]
actix-rt = "2"
criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
futures-util = { version = "0.3", default-features = false }
serde_json = "1"