[package]
name = "innocence"
version = "0.1.0"
edition = "2021"

[workspace]
members=[
    "crates/schema",
    "crates/utils"
]

[dependencies]
innocence-schema = { version = "0.1.0", path = "./crates/schema" }
innocence-utils = { version = "0.1.0", path = "./crates/utils" }
actix-cors ="0.6.0-beta.8"
actix-files ="0.6.0-beta.14"
actix-web = "4.0.0-beta.20"

argon2rs = "0.2"
awc = "3.0.0-beta.18"
chrono ={version = "0.4",features = ["serde"]}

diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
derive_more = "0.99"
dotenv = "0.15"
envy = "0.4"
env_logger = "0.9"
futures = "0.3"
jsonwebtoken = "7"
lazy_static = "1"
log = "0.4"
openssl = "0.10"
rand="0.8"
# redis="0.21"
# for serialize
serde = { version = "1", features = ["derive"] }
validator = { version = "0.14", features = ["derive"] }

[dev-dependencies]
actix-test = "0.1.0-beta.11"
# criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
# futures-util = { version = "0.3", default-features = false }
# serde_json = "1"

[profile.release]
debug = true