[package]
name = "innocence"
version = "0.1.0"
edition = "2021"

[workspace]
members=[
    "crates/db-schema",
    "crates/utils"
]

[dependencies]
innocence-db-schema = { version = "0.1.0", path = "./crates/db-schema" }
innocence-utils = { version = "0.1.0", path = "./crates/utils" }

actix-cors ="0.6"
actix-files ="0.6"
actix-web = "4"
awc = "3.0.0-beta.21"


argon2rs = "0.2"
chrono ={version = "0.4",features = ["serde"]}

diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
derive_more = "0.99"
dotenv = "0.15"
envy = "0.4"
env_logger = "0.9"
futures = "0.3"

lazy_static = "1"
log = "0.4"
openssl = "0.10"
rand="0.8"
# redis="0.21"
# for serialize
serde = { version = "1", features = ["derive"] }
validator = { version = "0.14", features = ["derive"] }

[dev-dependencies]
actix-test = "0.1.0-beta.13"
# criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
# futures-util = { version = "0.3", default-features = false }
# serde_json = "1"


# [features]
# default = ["postgres"]
# mysql = ["diesel/mysql_backend", "mysql_async", "mysql_common"]
# postgres = ["diesel/postgres_backend", "tokio-postgres", "tokio", "tokio/rt-multi-thread"]
[profile.release]
debug = true