[package]
name = "innocence-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
innocence-utils = { version = "0.1.0", path = "../utils" }
actix-web = "4.0.0-beta.19"
chrono ={version = "0.4",features = ["serde"]}
diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
serde = { version = "1", features = ["derive"] }
validator = { version = "0.14", features = ["derive"] }