[package]
name = "innocence-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors ="0.6"
actix-files ="0.6"
actix-web = "4"
awc = "3"
argon2rs = "0.2"
chrono ={version = "0.4",features = ["serde"]}
diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
derive_more = "0.99"
dotenv = "0.15"
envy = "0.4"
env_logger = "0.9"
futures = "0.3"
jsonwebtoken = "8"
lazy_static = "1"
log = "0.4"
rand="0.8"

serde = { version = "1", features = ["derive"] }
validator = { version = "0.14", features = ["derive"] }

[dev-dependencies]
actix-test = "0.1.0-beta.13"
serde_json = "1"